# clippy-by-tauri

./: .gitignore  README.md  package.json
.github/: copilot-instructions.md
src/: App.module.scss  App.tsx  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/utils/: clipboard.rs  clipboard_read.rs  clipboard_write.rs  db.rs  global_shortcut.rs  mod.rs  monitor.rs  nspanel.rs  optimize_img.rs  tray.rs
src/components/EmptyState/: index.tsx  styles.module.scss
src/components/RecordItem/: index.tsx  styles.module.scss
src/components/RecordList/: index.tsx  styles.module.scss
src/components/Search/: index.tsx  styles.module.scss
src/components/SearchInput/: index.tsx  styles.module.scss
src/components/Updater/: index.tsx  styles.module.scss
src/styles/: global.scss
src/utils/: db.ts  errorHandler.ts  winAdjust.ts
update/: update.sh  updater.json  version.sh
